# arbor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  README.md  TODO.md  arbor.yaml  arbor_1.yaml  arbor_2.yaml  arbor_3.yaml  arbor_4.yaml  arbor_inference.yaml  arbor_inference_2_gpus.yaml  arbor_serve_example.py  arbor_train.yaml  docker-compose.yml  grpo_test.py  grpo_testing.ipynb  grpo_testing.py  grpo_testing2.py  grpo_testing3.py  pyproject.toml  scratchpad.ipynb  scratchpad.py  test_colab_integration.py  test_gpu_mocking.py  testing.ipynb  training_config.yaml
.github/workflows/: black.yml  code-quality.yml  publish.yml  test.yml
arbor/: __init__.py  __main__.py  cli.py  client.py  colab.py  print_file_tree.py
arbor/client/: arbor_client.py
arbor/core/: config.py
arbor/dspy/: __init__.py  arbor_provider.py  grpo_optimizer.py
arbor/dspy_optimizers/: __init__.py  grpo.py
arbor/integrations/dspy/: __init__.py  arbor_provider.py  grpo_optimizer.py
arbor/server/: main.py
arbor/server/api/: schemas.py
arbor/server/api/models/: schemas.py
arbor/server/api/routes/: files.py  grpo.py  inference.py  jobs.py  monitor.py
arbor/server/core/: config.py  config_manager.py
arbor/server/monitor/: app.py  cli.py  mock_data.py  widgets.py
arbor/server/services/: file_manager.py  grpo_manager.py  health_manager.py  inference_manager.py  training_manager.py
arbor/server/services/comms/: async_batch_requester.py  comms.py  control_client.py  control_server.py
arbor/server/services/coms/: control_server.py
arbor/server/services/inference/: sgl_router_launch_server.py  stateless_process_group.py  vllm_client.py  vllm_client_mock.py  vllm_serve.py  vllm_serve_mock.py
arbor/server/services/jobs/: file_train_job.py  grpo_job.py  job.py  (+2 more)
arbor/server/utils/: error_handling.py  format_detection.py  helpers.py  logging.py  mock_utils.py  process_runner.py
arbor/training/grpo/: trainer.py
arbor/utils/: process_runner.py
configs/: deepspeed_config.yaml
deploy/: README.md  skypilot_dev.yaml  skypilot_train.yaml
docs/: quickstart.mdx
examples/: arbor_serve.py  arbor_serve_example.ipynb  arbor_serve_example.py  banking_grpo.py  batch_result_simple.jsonl  checkpointing.py  colab_quickstart.ipynb  dspy_sft_example.py  example_config.yaml  inference_swap.py  input_prompts.jsonl  mmgrpo.py  multihop_dev.py  multihop_grpo.py  notebook_quickstart.ipynb  request1.jsonl  request2.jsonl  sandbox.ipynb  sft.ipynb  test_build_batch_result.py  unique_chars.py  unique_chars_grpo.py
src/arbor/: __init__.py  cli.py
src/arbor/client/: api.py
src/arbor/server/: main.py
src/dspy_trainer/: cli.py
src/dspy_trainer/server/: main.py
src/dspy_trainer/uploads/: training_data.jsonl
tests/: conftest.py  test_cli.py  test_gpu_mocking.py
tests/data/: training_data_dpo.jsonl  training_data_pft.jsonl  training_data_sft.jsonl
tests/integration/: README.md  __init__.py  test_client_integration.py  test_context_window.py  test_openai_client_integration.py  test_training_integration.py
tests/server/core/: test_config.py
tests/server/services/: test_dpo_manager.py  test_dpo_manager_openai.py  test_file_train_gpu_allocation.py  test_gpu_allocation.py  test_gpu_cleanup_on_crash.py  test_gpu_manager.py  test_gpu_memory_sharing.py  test_grpo_gpu_allocation.py  test_inference_manager.py  test_job_artifacts.py  test_job_completion.py  test_job_manager.py  test_training_manager.py
(+52 files in other folders)
