[project]
name = "arbor-ai"
version = "0.1.4"
description = "A framework for fine-tuning and managing language models"
authors = [
    {name = "Noah Ziems",email = "nziems2@nd.edu"}
]
readme = "README.md"
requires-python = ">=3.9, <3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "click",
    "python-multipart",
    "pydantic-settings",
    "torch",
    "transformers",
    "trl",
    "peft",
    "ray>=2.9",
    "setuptools (>=76.0.0,<77.0.0)",
    "vllm==0.8.1",
    "pyzmq>=26.4.0",
]

[project.scripts]
arbor = "arbor.cli:cli"
